# SCOTpy

./: README.md  example.py  pyproject.toml  requirements.txt  scotpy.py  scotpy_decorators.py  scotpy_types.py
examples/: distributed_sparse_linear_regression.py  distributed_sparse_logistic_regression.py  dslr.ipynb  example.py
scotpy/: benchmark.py  scotpy.py
